--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <li>CSS</li>
             <li>Javascript</li>
           </ul>
+          <p>I am continuing to grow my skills so that I can provide the highest quality services.  Using those skills, my goal is to build aesthetically pleasing, responsive websites that function seamlessly.</p>
           </div>
           <div class="item">
           <img src="maconmac.jpeg" alt="dog laying on laptop">
