--- a/index.html
+++ b/index.html
@@ -101,12 +101,19 @@
       <div class="wrapper">
       <section id="contact">
         <h2>Contact Information</h2>
-          <p>
-            Contact me here: <a href="mailto: murphyjj@my.gvltec.edu">Send Email</a>
-          </p>
+          <form action="#" method="POST">
+            <label for="user-name">Name:</label>
+            <input id="user-name" type="text" name="name">
+            <label for="user-email">Email:</label>
+            <input id="user-email" type="text" name="email">
+            <label for="user-message">Message:</label>
+            <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
+            <button type="submit">Submit</button>
+          </form>
       </section>
       </div>
     </main>
+<!-- footer -->    
     <footer>
       <p>@JamesMurphy</p>
     </footer>
