--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <!-- intro -->
       <div class="wrapper">
         <div class="group">
-      <div class="introImage">
-      <img src="PortfolioImage.jpg" alt="Picture of me">
-      </div>
+          <div class="introImage">
+            <img src="PortfolioImage.jpg" alt="Picture of me">
+          </div>
       <section id="intro">
         <h2>Hello, I'm James Murphy!</h2>
           <p>
@@ -88,12 +88,24 @@
       <hr>
 <!-- project -->
       <div class="wrapper">
-      <section id="project">
         <h2>Projects</h2>
+      <section id="project">
+          <div id='apps-l'>
           <h3>Tee Time App</h3>
             <p>A litt bit about the tee time app.</p>
+          </div>
+          <div id='apps-l'>
           <h3>PB&J App</h3>
             <p>A little bit about the PB&J app.</p>
+          </div>
+          <div id='apps-r'>
+          <h3>Quiz App</h3>
+            <p>A quiz about Tiger Woods.</p>
+          </div>
+          <div id='apps-r'>
+          <h3>Video Game Stats App</h3>
+            <p>Keep track of your video game stats.</p>
+          </div>
       </section>
       </div>
       <hr>
@@ -101,7 +113,7 @@
       <div class="wrapper">
       <section id="contact">
         <h2>Contact Information</h2>
-          <form action="#" method="POST">
+          <form action="https://formspree.io/murphyjj@my.gvltec.edu" method="POST">
             <label for="user-name">Name:</label>
             <input id="user-name" type="text" name="name">
             <label for="user-email">Email:</label>
