--- a/index.html
+++ b/index.html
@@ -90,30 +90,46 @@
       <div class="wrapper">
         <h2>Projects</h2>
       <section id="project">
-          <div id='apps-l'>
+          <div id='apps'>
           <h3>Tee Time App</h3>
             <p>A litt bit about the tee time app.</p>
+            <a href="teetimeapp.repo">Github Repo</a>
+            <a href="teetimeapp.live">Tee Time App</a>
           </div>
-          <div id='apps-l'>
+          <div id='apps'>
           <h3>PB&J App</h3>
             <p>A little bit about the PB&J app.</p>
+            <a href="pbjapp.repo">Github Repo</a>
+            <a href="pbjapp.live">PB&J App</a>
           </div>
-          <div id='apps-r'>
+          <div id='apps'>
           <h3>Quiz App</h3>
             <p>A quiz about Tiger Woods.</p>
+            <a href="quizapp.repo">Github Repo</a>
+            <a href="quizapp.live">Quiz App</a>
           </div>
-          <div id='apps-r'>
+          <div id='apps'>
           <h3>Video Game Stats App</h3>
             <p>Keep track of your video game stats.</p>
+            <a href="videogame.repo">Github Repo</a>
+            <a href="videogame.live">Video Game Stats App</a>
           </div>
       </section>
       </div>
       <hr>
 <!-- contact -->
       <div class="wrapper">
-      <section id="contact">
-        <h2>Contact Information</h2>
-          <form action="https://formspree.io/murphyjj@my.gvltec.edu" method="POST">
+        <section id="contact-me">
+          <h2>Contact Me Through:</h2>
+            <p><a href="https://github.com/jamesIVdeveloper">Github</a></p>
+            <p><a href="https://www.linkedin.com/in/james-murphy-42331180/">LinkedIn</a></p>
+            <p><a href="mailto:murphyjj@my.gvltec.edu">Email</a> (murphyjj@my.gvltec.edu)</p>
+        </section>
+      </div>
+      <div class="wrapper">
+      <section id="contact-info">
+        <h2>Or Leave Your Contact Information</h2>
+          <form action="https://formspree.io/f/xpzorjdl" method="POST">
             <label for="user-name">Name:</label>
             <input id="user-name" type="text" name="name">
             <label for="user-email">Email:</label>
