--- a/index.html
+++ b/index.html
@@ -92,27 +92,43 @@
       <section id="project">
           <div id='apps'>
           <h3>Tee Time App</h3>
-            <p>A litt bit about the tee time app.</p>
-            <a href="teetimeapp.repo">Github Repo</a>
-            <a href="teetimeapp.live">Tee Time App</a>
+            <h4>Description:</h4>
+              <p>This a description of the Tee Time App.</p>
+            <h4>Skills Used:</h4>
+              <p>HTML, CSS, Javascript.</p>
+            <h4>Links:</h4>
+              <a href="teetimeapp.repo" target="_blank">Github Repo</a>
+              <a href="teetimeapp.live" target="_blank">Tee Time App</a>
           </div>
           <div id='apps'>
           <h3>PB&J App</h3>
-            <p>A little bit about the PB&J app.</p>
-            <a href="pbjapp.repo">Github Repo</a>
-            <a href="pbjapp.live">PB&J App</a>
+            <h4>Description:</h4>
+              <p>A little bit about the PB&J app.</p>
+            <h4>Skills Used:</h4>
+              <p>HTML, CSS, Javascript</p>
+            <h4>Links:</h4>
+              <a href="pbjapp.repo" target="_blank">Github Repo</a>
+              <a href="pbjapp.live" target="_blank">PB&J App</a>
           </div>
           <div id='apps'>
           <h3>Quiz App</h3>
-            <p>A quiz about Tiger Woods.</p>
-            <a href="quizapp.repo">Github Repo</a>
-            <a href="quizapp.live">Quiz App</a>
+            <h4>Description:</h4>
+              <p>A quiz about Tiger Woods.</p>
+            <h4>Skills Used:</h4>
+              <p>HTML, CSS, Javascript.</p>
+            <h4>Links:</h4>
+              <a href="quizapp.repo" target="_blank">Github Repo</a>
+              <a href="quizapp.live" target="_blank">Quiz App</a>
           </div>
           <div id='apps'>
           <h3>Video Game Stats App</h3>
-            <p>Keep track of your video game stats.</p>
-            <a href="videogame.repo">Github Repo</a>
-            <a href="videogame.live">Video Game Stats App</a>
+            <h4>Description:</h4>
+              <p>Keep track of your video game stats.</p>
+            <h4>Skills Used:</h4>
+              <p>HTML, CSS, Javascript.</p>
+            <h4>Links:</h4>
+              <a href="videogame.repo" target="_blank">Github Repo</a>
+              <a href="videogame.live" target="_blank">Video Game Stats App</a>
           </div>
       </section>
       </div>
@@ -121,14 +137,14 @@
       <div class="wrapper">
         <section id="contact-me">
           <h2>Contact Me Through:</h2>
-            <p><a href="https://github.com/jamesIVdeveloper">Github</a></p>
-            <p><a href="https://www.linkedin.com/in/james-murphy-42331180/">LinkedIn</a></p>
+            <p><a href="https://github.com/jamesIVdeveloper" target="_blank">Github</a></p>
+            <p><a href="https://www.linkedin.com/in/james-murphy-42331180/" target="_blank">LinkedIn</a></p>
             <p><a href="mailto:murphyjj@my.gvltec.edu">Email</a> (murphyjj@my.gvltec.edu)</p>
         </section>
       </div>
       <div class="wrapper">
       <section id="contact-info">
-        <h2>Or Leave Your Contact Information</h2>
+        <h2>Or Leave Your Contact Information:</h2>
           <form action="https://formspree.io/f/xpzorjdl" method="POST">
             <label for="user-name">Name:</label>
             <input id="user-name" type="text" name="name">
